gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail21001.d
version https://git-lfs.github.com/spec/v1
oid sha256:c225759b9227836925e844fe89d2cf19b63dbe7eeceae68261d420f8848d7729
size 172
